# WAuxiliary_Zygisk

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/me/hd/wauxv/ui/: DexObfActivity.kt
app/src/main/java/me/hd/wauxv/zygisk/: Main.kt
app/src/main/java/me/hd/wauxv/zygisk/hook/: ApplicationHook.kt  LoadedApkHook.kt  WechatHook.kt
app/src/main/java/me/hd/wauxv/zygisk/hook/apps/qq/: QQTimEntry.kt
app/src/main/java/me/hd/wauxv/zygisk/hook/apps/qq/base/: BaseHooker.kt
app/src/main/java/me/hd/wauxv/zygisk/hook/apps/qq/data/: HostData.kt  VerData.kt
app/src/main/java/me/hd/wauxv/zygisk/hook/apps/qq/hooker/: EmoReplyMenuHooker.kt  SupportReplyHooker.kt
app/src/main/java/me/hd/wauxv/zygisk/hook/apps/wx/: WechatEntry.kt
app/src/main/java/me/hd/wauxv/zygisk/hook/core/: ApplicationHook.kt  LoadedApkHook.kt
app/src/main/java/me/hd/wauxv/zygisk/hook/entry/: QQTimEntry.kt  QQTimHook.kt  WechatEntry.kt  WechatHook.kt
app/src/main/java/me/hd/wauxv/zygisk/hook/hooker/base/: BaseHooker.kt
app/src/main/java/me/hd/wauxv/zygisk/hook/hooker/qq/: SupportReplyHooker.kt
app/src/main/java/me/hd/wauxv/zygisk/hook/hooker/wx/: AntiRevokeHooker.kt
app/src/main/java/me/hd/wauxv/zygisk/hook/util/: WLog.kt
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/: BuildVersion.kt  GitVersion.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
